# codeSamples

C++/: Lab1.csv  WebTest1.webtest
C++/AOS/: AOS_lab_1.cpp  Readme.txt
C++/CourseWork/RSA/: RSA.sln  Readme.txt
C++/GraduationWork/: GraduationWork.sln
C++/GraduationWork/Debug/: GraduationWork.ilk
C++/GraduationWork/GraduationWork/: GraduationWork.cpp  GraduationWork.vcxproj  GraduationWork.vcxproj.filters  Longi.cpp  Longi.h  ReadMe.txt  stdafx.cpp
C++/HelloWorld/: HelloWorld.sln
C++/HelloWorld/Debug/: HelloWorld.ilk
C++/HelloWorld/HelloWorld/: Camera.h  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  Shader.cpp  Shader.h  glad.c  main.cpp  stb_image.h
C++/Image Processing/OpenCV usage/: ConsoleApplication1.vcxproj  Main.cpp
C++/Parse_XML/: Parse_XML.VC.VC.opendb  Parse_XML.sln  ReadMe.txt
C++/Parse_XML/Debug/: Parse_XML.ilk
C++/Parse_XML/Parse_XML/: Parse_XML.cpp  Parse_XML.vcxproj  Parse_XML.vcxproj.filters  ReadMe.txt  stdafx.cpp  test.xml
C++/Samsung/: Readme
C++/Samsung/Iron_sticks_dp/: Iron_Sticks_dp.cpp  Task.docx
C++/dijkstra/: dijkstra.cpp  event.h  pqueue.cpp  pqueue.h
C++/diploma/: CMakeLists.txt  main.cpp
C++/diploma/include/: ringsignature.hpp  rsa_elem.hpp  rsa_generator.hpp
C++/diploma/src/: ringsignature.cpp  rsa_elem.cpp  rsa_generator.cpp
C++/knapsack/: Readme.txt  knapsack.cpp
Java/Lab2_FA/: Automat_example.txt  Readme.txt
Java/Lab3/: Readme.txt
Java/Lab3/src/: Main.java
Java/RSA/: Readme.txt  Курсова робота Хоменко 3 курс.docx
Java/Thread and Process/: Readme.txt
Python/: Auto Responder.py
(+74 files in other folders)
